[doc] Add a step about JDK17 configuration to the Pulsar SQL document